# CPP

./: .gitignore  README.md  calculator.c  outline.md
.github/agents/: Study assistant.agent.md
.github/workflows/: c-cpp.yml
appendix-optimization/: Appendix1-code-optimization.pptx
chapter01/: README.md
chapter02/: Lecture02.pptx
project_1/: 3_18repo.md  a  b  bc_manual_text.txt  calculator  calculator.c  calculator_old.c  calculator_v2.c  project1_text.txt  report.md  test_script.sh  v2
projects/: Dotproduct.java  dotproduct  dotproduct.c  project1.md  project4.md  project5.md  report.md  results_c.csv  results_java.csv
rust/: Rust-Lab1.pptx  Rust-Lab2.pptx  Rust-Lecture1.pptx  Rust-Lecture2.pptx
week01/: Lab01.pptx  README.md
week02/: Lab02.pptx  Lecture02.pptx  README.md
week03/: Lab03.pptx  Lecture03.pptx  README.md
week04/: Lab04.pptx  Lecture04.pptx  README.md  array-illustration.xlsx
week05/: Lab05.pptx  Lecture05.pptx  README.md  ex1.c  ex2  ex2.cpp  ex3.c  ex3_2.c
week06/: Lab06.pptx  Lecture06.pptx  README.md
week07/: Lab07.pptx  Lecture07.pptx  README.md  function-template.cpp
week08/: Lab08.pptx  Lecture08-cuda.pptx  README.md
week09/: Lab09.pptx  Lecture09.pptx  README.md
week10/: Lab10.pptx  Lecture10.pptx  README.md
week10/examples/exampleMat/: CMakeLists.txt  matexample.cpp
week11/: Lab11.pptx  Lecture11.pptx  README.md
week12/: Lab12.pptx  Lecture12.pptx  README.md
week13/: Lab13.pptx  Lecture13.pptx  README.md
week14/: Lab14.pptx  Lecture14.pptx  README.md
week15/: Lab15.pptx  Lecture15.pptx  README.md
(+270 files in other folders)
